welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:11: error: ';' expected but ',' found.
if(x=="E") {avance();avance();avance();avance();ava,ce();}
                                                   ^